--- a/.github/workflows/push-inventaire.yml
+++ b/.github/workflows/push-inventaire.yml
@@ -1,26 +1,37 @@
-name: Ajouter inventaire
+name: Push Inventaire Excel
 
 on:
-  workflow_dispatch:  # Tu le déclenches manuellement (on peut aussi faire "push" ou "schedule")
+  workflow_dispatch:  # Permet de lancer manuellement le workflow depuis GitHub
 
 jobs:
-  upload-inventaire:
+  update-inventory:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout du dépôt
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Configurer Git
-        run: |
-          git config --global user.email "ton.email@exemple.com"
-          git config --global user.name "TonNom"
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-      - name: Ajouter le fichier d'inventaire
+      - name: Install dependencies
         run: |
-          echo "Ajout manuel du fichier"
-          mkdir -p inventaire
-          echo "Contenu temporaire depuis action" > inventaire/exemple.txt
-          git add inventaire/
-          git commit -m "Ajout inventaire via GitHub Action"
-          git push https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git
+          python -m pip install --upgrade pip
+          pip install openpyxl
+
+      - name: Update inventaire_global.xlsx
+        run: |
+          python update_inventaire.py
+
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add inventaire_global.xlsx
+          git commit -m "Mise à jour automatique de inventaire_global.xlsx"
+          git push
+        env:
+          # Le token est automatiquement disponible dans GitHub Actions en tant que GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
