--- a/.github/workflows/push-inventaire.yml
+++ b/.github/workflows/push-inventaire.yml
@@ -1,37 +1,19 @@
-name: Push Inventaire Excel
+from openpyxl import load_workbook
+from datetime import datetime
 
-on:
-  workflow_dispatch:  # Permet de lancer manuellement le workflow depuis GitHub
+filename = "inventaire_global.xlsx"
 
-jobs:
-  update-inventory:
-    runs-on: ubuntu-latest
+wb = load_workbook(filename)
+ws = wb.active
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+# Exemple : ajout d’une ligne avec date, camion, pièce, quantité, technicien
+ws.append([
+    datetime.now().strftime("%Y-%m-%d"),
+    "Camion-1",
+    "Piece-XYZ",
+    1,
+    "Technicien 1"
+])
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install openpyxl
-
-      - name: Update inventaire_global.xlsx
-        run: |
-          python update_inventaire.py
-
-      - name: Commit and push changes
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add inventaire_global.xlsx
-          git commit -m "Mise à jour automatique de inventaire_global.xlsx"
-          git push
-        env:
-          # Le token est automatiquement disponible dans GitHub Actions en tant que GITHUB_TOKEN
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+wb.save(filename)
+print("Fichier inventaire mis à jour.")
